--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,8 +1,12 @@
 * {
-  outline: 1px solid red !important;
+  /* outline: 1px solid red !important; */
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body {
+  /* background-color: rgb(155, 154, 154); */
 }
 
 .logo {
@@ -12,30 +16,39 @@
   height: 20px;
 }
 
-header {
-  display: grid;
-  grid-template-rows: auto auto;
-  row-gap: 20px;
-}
-
 .content-nav {
   display: grid;
   grid-template-columns: 40px auto auto;
   padding: 12px;
+  background-color: rgb(58, 58, 58);
 }
 
 .type-items {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background-color: rgb(109, 109, 109);
+}
+
+.search-wrapper {
+  margin: 0 auto;
+}
+
+#search_bar {
+  background-color: rgb(129, 129, 129);
+  border: 1px solid rgb(140, 140, 140);
+  padding: 15px;
 }
 
 .tag-items {
   margin-left: 15px;
+  margin-bottom: -20px;
   padding: 6px;
 }
 
 .tag-items > li {
   margin-left: 20px;
+  background-color: rgb(120, 120, 120);
 }
 
 ul {
@@ -54,50 +67,219 @@ ul {
   grid-template-columns: repeat(2, 1fr);
 }
 
+.two-by-two {
+  grid-template-columns: 600px 600px;
+  column-gap: 25px;
+  row-gap: 20px;
+  margin-left: 10px;
+}
+
+.wide {
+  width: 600px;
+}
+
 .section-container {
-  margin: 20px 0 20px 10px;
+  margin: 20px 0 20px 70px;
+}
+
+.article-content-container {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+}
+
+p {
+  margin: 20px 0;
+  line-height: 1.5;
+}
+
+.article-text-container {
+  margin-left: 20px;
+  width: 320px;
+}
+
+.article-text-container > p {
+  background-color: rgb(203, 203, 203);
+}
+
+.article-text-container > footer {
+  background-color: rgb(230, 230, 230);
+}
+
+.header-text-container > h1, .header-text-container > h2 {
+  background-color: rgb(92, 92, 92);
+}
+
+.header-text-container > p {
+  background-color: rgb(168, 168, 168);
+}
+
+article > p, article > a {
+  background-color: rgb(130, 130, 130);
+  text-decoration: none;
 }
 
 .newsletter-container {
   margin: 0 auto;
-  height: 900px;
-  width: 500px;
+  height: 800px;
+  width: 400px;
 }
 
 .newsletter-box {
   position: relative;
   top: 20%;
   height: 70%;
-  border: 1px solid yellow;
+  border: 1px solid rgb(107, 107, 107);
+  background-color: rgb(107, 107, 107);
 }
 
-.aside-image {
+.newsletter-content {
+  position: relative;
+  top: 25%;
+  width: 80%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: auto auto;
+}
+
+.newsletter-content > button {
+  width: 65%;
+  height: 50px;
+  margin: 10px auto;
+  border: 1px dashed rgb(92, 92, 92);
+  background-color: rgb(83, 83, 83);
+}
+
+.newsletter-content > p {
+  background-color: rgb(94, 94, 94);
+  text-align: center;
+}
+
+
+.newsletter-image {
   position: absolute;
-  top: -125px;
-  left: 125px;
-  border: 1px solid blue;
+  top: -100px;
+  left: 100px;
+  border: 1px solid rgb(67, 67, 67);
   border-radius: 50%;
-  height: 250px;
-  width: 250px;
+  height: 200px;
+  width: 200px;
+  background-color: rgb(67, 67, 67);
 }
 
 .article-image {
   width: 80px;
   height: 80px;
-  margin: 10px;
-  border: 2px solid red;
+  margin: 30px 20px 20px 20px;
+  border: 2px solid #777066;
   transform: rotate(-20deg);
+  background-color: rgb(59, 59, 59);
+}
+
+.big-image {
+  width: 120px;
+  height: 120px;
+  margin-top: 60px;
 }
 
 .card-container {
   height: 70vh;
   display: flex;
   justify-content: center;
-  
+}
+
+.boxes {
+  margin: 20px 0;
+  display: flex;
+  align-items: center;
+  overflow-x: scroll;
+}
+
+.box-container {
+  height: 600px;
+  border: 1px solid darkgray;
+}
+
+.box {
+  position: relative;
+  top: 120px;
+  margin: 0 40px;
+  height: 70%;
+  width: 450px;
+  border: 1px solid rgb(180, 180, 180);
+  background-color: rgb(200, 200, 200);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.box > h3 {
+  position: inherit;
+  bottom: 70px;
+  padding: 40px;
+  background-color: rgb(142, 142, 142);
+}
+
+.box > button {
+  height: 90px;
+  width: 80%;
+  background-color: rgb(50, 50, 50);
+  border: none;
+}
+
+.box-image {
+  position: relative;
+  width: 50%;
+  height: 50%;
+  top: -30%;
+  border: 1px solid grey;
+  background-color: rgb(100, 100, 100);
+  border-radius: 50%;
 }
 
 .card {
   width: 330px;
   height: 90%;
   margin: 0 30px;
+  border: 1px solid grey;
+  background-color: grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.card > p, .card > h2 {
+  text-align: center;
+  padding: 0 10px;
+}
+
+.card > h2 {
+  background-color: rgb(65, 65, 65);
+}
+
+.card > button {
+  width: 80%;
+  height: 80px;
+  margin: 0 auto;
+  border: none;
+  background-color: rgb(50, 50, 50);
+}
+
+.footer-items {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.footer-items > li {
+  display: inline-block;
+  width: 90px;
+  text-align: center;
+  margin: 20px 20px;
+  background-color: rgb(100, 100, 100);
+}
+
+.links {
+  background-color:rgb(58, 58, 58);
 }
