--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -7,6 +7,27 @@
 
 body {
   /* background-color: rgb(155, 154, 154); */
+  font: 400 17px/26px Lato, sans-serif;
+}
+
+h1 {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 30px;
+}
+
+h3 {
+  font-size: 20px;
+  line-height: 28px;
+}
+
+.regular {
+  font-weight: 400;
 }
 
 .logo {
